# maptoposter-online

./: .CLAUDE.md  .gitignore  .oxfmtrc.jsonc  .oxlintignore  DYNAMIC_ROAD_WIDTH_SCALING.md  ISSUES_AND_SOLUTIONS.md  LICENSE  README.md  README_CN.md  RESOLUTION_ANALYSIS.md  SNAKE_GAME_INTEGRATION.md  TECHNICAL_OPTIMIZATION.md  bunfig.toml  components.json  index.html  oxlint.json  package-lock.json  package.json  progress_log.txt  tsconfig.app.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/commands/: add-animations.md  review-ai-accessibility.md  review-fe.md  review-rust.md
.github/: FUNDING.yml
docs/: CALL_SEQUENCE.md  PIPELINE_OVERVIEW.md  create_map_poster.py
messages/: de.json  en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh-CN.json  zh.json
project.inlang/: settings.json
scripts/: generate-location-data.mjs  scan-images.ps1
src/: App.tsx  data-worker.ts  db.ts  flatten-roads.test.ts  index.css  test.ts  test_local.ts  types.ts  utils.test.ts  utils.ts  worker.ts
src/assets/: images.json
src/components/: ColorPasteHowToUse.tsx  SnakeGame.tsx  app-header.tsx  artistic-map.tsx  color-paste-how-to-use.tsx  color-picker.tsx  data-settings.tsx  example-cards.tsx  font-settings.tsx  footer.tsx  gallery.tsx  generation-modal.tsx  location-combobox.tsx  location-selector.tsx  location-settings.tsx  map-preview.tsx  poster-size-selector.tsx  snake-game.tsx  (+4 more)
temp/: App.tsx  index.css
wasm/: Cargo.toml  build.ps1  build_log.txt
wasm/src/: data_processor.rs  lib copy.rs  lib.rs  projection.rs  renderer.rs  types.rs  utils.rs
(+42 files in other folders)
